Fix the rest of merging related table bugs found by Jens. Should fix also 112243. Please test it, if you have a chance.

BUG: 112243